--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     codebases, whether libraries or forks.
                 </p>
                 <div class="profile-links">
-                    <a href="#">
+                    <a href="./other/MatiasGuliasCarrascalCV.pdf" download="MatiasGuliasCarrascalCV.pdf">
                         <img src="./icons/cv-file-interface-symbol-svgrepo-com.svg" alt="CV" class="icon" />
                         Download CV
                     </a>
@@ -37,9 +37,9 @@
                         <img src="./icons/github-svgrepo-com.svg" alt="GitHub" class="icon" />
                         GitHub
                     </a>
-                    <a href="#">
+                    <a href="#" onclick="copyEmail()">
                         <img src="./icons/mail-plus-svgrepo-com.svg" alt="Mail" class="icon" />
-                        Mail
+                        masitacarg@gmail.com
                     </a>
                 </div>
             </div>
@@ -174,6 +174,17 @@
         </section>
 
     </main>
+    <script>
+        function copyEmail() {
+            const email = "masitacarg@gmail.com";
+            navigator.clipboard.writeText(email).then(() => {
+                alert("Email copied to clipboard: " + email);
+            }).catch((err) => {
+                console.error("Failed to copy email: ", err);
+                alert("Failed to copy email. Please try again.");
+            });
+        }
+    </script>
 </body>
 
 </html>
