Fix Other projects title

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <hr />
 
         <section>
-            <h2>Otros proyectos</h2>
+            <h2>Other projects</h2>
             <ul>
                 <li><a href="https://garkatron.github.io/PC-PokeApi/" target="_blank" rel="noopener noreferrer">PC
                         Pokémon Web (PokeAPI)</a></li>
