--- a/index.html
+++ b/index.html
@@ -12,166 +12,174 @@
 
 </head>
 
-<body>
-    <main class="container">
-        <section class="profile-section">
-            <img src="./photo.jpg" alt="Foto de Matias" class="profile-img" />
-            <div class="description">
-                <h1>Matias</h1>
-                <h3>Web Developer · Fast Learner · Minecraft Modder</h3>
-                <p><strong>About me:</strong></p>
-                <p>
-                    I'm proficient in <strong>Java</strong>, currently learning <strong>Rust</strong> and language VM
-                    development.
-                    Passionate, quick learner, great at researching, and experienced in working with existing
-                    codebases, whether libraries or forks.
-                </p>
-                <div class="profile-links">
-                    <a href="./other/MatiasGuliasCarrascalCV.pdf" download="MatiasGuliasCarrascalCV.pdf">
-                        <img src="./icons/cv-file-interface-symbol-svgrepo-com.svg" alt="CV" class="icon" />
-                        Download CV
-                    </a>
-                    <a href="https://github.com/Garkatron" target="_blank" rel="noopener noreferrer">
-                        <img src="./icons/github-svgrepo-com.svg" alt="GitHub" class="icon" />
-                        GitHub
-                    </a>
-                    <a href="#" onclick="copyEmail()">
-                        <img src="./icons/mail-plus-svgrepo-com.svg" alt="Mail" class="icon" />
-                        masitacarg@gmail.com
-                    </a>
-                </div>
-            </div>
-        </section>
-
-        <hr />
-
-        <section>
-            <h2 style="text-align: center;">Tech Stack</h2>
-
-            <div class="tech-categories">
-                <div class="tech-category">
-                    <div class="tech-category-title">Languages</div>
-                    <div class="tech-grid">
-                        <img src="./icons/java-svgrepo-com.svg" alt="Java" class="devicon" title="Java" />
-                        <img src="./icons/rust-svgrepo-com.svg" alt="Rust" class="devicon" title="Rust" />
-                        <img src="./icons/js-svgrepo-com.svg" alt="JavaScript" class="devicon" title="JavaScript" />
-                        <img src="./icons/python-svgrepo-com.svg" alt="Python" class="devicon" title="Python" />
-                        <img src="./icons/kotlin-svgrepo-com.svg" alt="Kotlin" class="devicon" title="Kotlin" />
+<body id="ex1">
+    <main id="ex1-layer" class="container">
+        <div class="paper-effect">
+            <section class="profile-section">
+                <img src="./photo.jpg" alt="Foto de Matias" class="profile-img" />
+                <div class="description">
+                    <h1>Matias</h1>
+                    <h3>Web Developer · Fast Learner · Minecraft Modder</h3>
+                    <p><strong>About me:</strong></p>
+                    <p>
+                        I'm proficient in <strong>Java</strong>, currently learning <strong>Rust</strong> and language
+                        VM
+                        development.
+                        Passionate, quick learner, great at researching, and experienced in working with existing
+                        codebases, whether libraries or forks.
+                    </p>
+                    <div class="profile-links">
+                        <a href="./other/MatiasGuliasCarrascalCV.pdf" download="MatiasGuliasCarrascalCV.pdf">
+                            <img src="./icons/cv-file-interface-symbol-svgrepo-com.svg" alt="CV" class="icon" />
+                            Download CV
+                        </a>
+                        <a href="https://github.com/Garkatron" target="_blank" rel="noopener noreferrer">
+                            <img src="./icons/github-svgrepo-com.svg" alt="GitHub" class="icon" />
+                            GitHub
+                        </a>
+                        <a href="#" onclick="copyEmail()">
+                            <img src="./icons/mail-plus-svgrepo-com.svg" alt="Mail" class="icon" />
+                            masitacarg@gmail.com
+                        </a>
                     </div>
                 </div>
+            </section>
 
-                <div class="tech-category">
-                    <div class="tech-category-title">Frameworks & Libraries</div>
-                    <div class="tech-grid">
-                        <img src="./icons/bootstrap-4-logo-svgrepo-com.svg" alt="Bootstrap" class="devicon"
-                            title="Bootstrap" />
+            <hr />
+
+            <section>
+                <h2 style="text-align: center;">Tech Stack</h2>
+
+                <div class="tech-categories">
+                    <div class="tech-category">
+                        <div class="tech-category-title">Languages</div>
+                        <div class="tech-grid">
+                            <img src="./icons/java-svgrepo-com.svg" alt="Java" class="devicon" title="Java" />
+                            <img src="./icons/rust-svgrepo-com.svg" alt="Rust" class="devicon" title="Rust" />
+                            <img src="./icons/js-svgrepo-com.svg" alt="JavaScript" class="devicon" title="JavaScript" />
+                            <img src="./icons/python-svgrepo-com.svg" alt="Python" class="devicon" title="Python" />
+                            <img src="./icons/kotlin-svgrepo-com.svg" alt="Kotlin" class="devicon" title="Kotlin" />
+                        </div>
+                    </div>
+
+                    <div class="tech-category">
+                        <div class="tech-category-title">Frameworks & Libraries</div>
+                        <div class="tech-grid">
+                            <img src="./icons/bootstrap-4-logo-svgrepo-com.svg" alt="Bootstrap" class="devicon"
+                                title="Bootstrap" />
+                        </div>
+                    </div>
+
+                    <div class="tech-category">
+                        <div class="tech-category-title">Tools</div>
+                        <div class="tech-grid">
+                            <img src="./icons/git-svgrepo-com.svg" alt="Git" class="devicon" title="Git" />
+                            <img src="./icons/postman-icon-svgrepo-com.svg" alt="Postman" class="devicon"
+                                title="Postman" />
+                        </div>
+                    </div>
+
+                    <div class="tech-category">
+                        <div class="tech-category-title">Other</div>
+                        <div class="tech-grid">
+                            <img src="./icons/linux-svgrepo-com.svg" alt="Linux" class="devicon" title="Linux" />
+                            <img src="./icons/android-svgrepo-com.svg" alt="Android" class="devicon" title="Android" />
+                            <img src="./icons/sql-database-generic-svgrepo-com.svg" alt="SQL" class="devicon"
+                                title="SQL Database" />
+                        </div>
                     </div>
                 </div>
+            </section>
 
-                <div class="tech-category">
-                    <div class="tech-category-title">Tools</div>
-                    <div class="tech-grid">
-                        <img src="./icons/git-svgrepo-com.svg" alt="Git" class="devicon" title="Git" />
-                        <img src="./icons/postman-icon-svgrepo-com.svg" alt="Postman" class="devicon" title="Postman" />
+
+
+            <section>
+                <h2>Top 3 Projects</h2>
+                <div class="card-grid">
+                    <div class="card">
+                        <strong>Rlox lang</strong><br />
+                        A programming language based on jlox from <em>Crafting Interpreters</em>.<br />
+                        <a href="https://github.com/Garkatron/Rust-Lox-Interpreter" target="_blank"
+                            rel="noopener noreferrer">Ver más</a>
+                    </div>
+
+                    <div class="card">
+                        <strong>2D Rasterizer in Rust</strong><br />
+                        A 2D rasterizer based on OneLoneCoder's C++ version.<br />
+                        <a href="https://github.com/Garkatron/ScrapRenderer" target="_blank"
+                            rel="noopener noreferrer">Ver
+                            más</a>
+                    </div>
+
+                    <div class="card">
+                        <strong>Rust-Coded LRU Cache</strong><br />
+                        Tiny LRU cache to understand its workings.<br />
+                        <a href="https://github.com/Garkatron/LRU-Cache-Rust" target="_blank"
+                            rel="noopener noreferrer">Ver
+                            más</a>
                     </div>
                 </div>
+            </section>
 
-                <div class="tech-category">
-                    <div class="tech-category-title">Other</div>
-                    <div class="tech-grid">
-                        <img src="./icons/linux-svgrepo-com.svg" alt="Linux" class="devicon" title="Linux" />
-                        <img src="./icons/android-svgrepo-com.svg" alt="Android" class="devicon" title="Android" />
-                        <img src="./icons/sql-database-generic-svgrepo-com.svg" alt="SQL" class="devicon"
-                            title="SQL Database" />
-                    </div>
+            <hr />
+
+            <section>
+                <h2>Other projects</h2>
+                <ul>
+                    <li><a href="https://garkatron.github.io/PC-PokeApi/" target="_blank" rel="noopener noreferrer">PC
+                            Pokémon Web (PokeAPI)</a></li>
+                    <li><a href="https://github.com/Garkatron/TerraX69-JS" target="_blank"
+                            rel="noopener noreferrer">TerraX69 (JS Game, Tauri)</a></li>
+                    <li><a href="https://github.com/Garkatron/Von-Neumann-Simulator" target="_blank"
+                            rel="noopener noreferrer">CHIP-8 Emulator in Python</a></li>
+                    <li><a href="https://github.com/Garkatron/Von-Neumann-Simulator" target="_blank"
+                            rel="noopener noreferrer">Von Neumann Simulator (Python)</a></li>
+                </ul>
+            </section>
+
+            <hr />
+
+            <section style="pointer-events: none;">
+                <div class="fish">
+                    <div class="koiCoil"></div>
+                    <div class="koiCoil"></div>
+                    <div class="koiCoil"></div>
+                    <div class="koiCoil"></div>
+                    <div class="koiCoil"></div>
+                    <div class="koiCoil"></div>
+                    <div class="koiCoil"></div>
+                    <div class="koiCoil"></div>
+                    <div class="koiCoil"></div>
+                    <div class="koiCoil"></div>
+                    <div class="koiCoil"></div>
+                    <div class="koiCoil"></div>
+                    <div class="koiCoil"></div>
+                    <div class="koiCoil"></div>
+                    <div class="koiCoil"></div>
                 </div>
-            </div>
-        </section>
-
-
-
-        <section>
-            <h2>Top 3 Projects</h2>
-            <div class="card-grid">
-                <div class="card">
-                    <strong>Rlox lang</strong><br />
-                    A programming language based on jlox from <em>Crafting Interpreters</em>.<br />
-                    <a href="https://github.com/Garkatron/Rust-Lox-Interpreter" target="_blank"
-                        rel="noopener noreferrer">Ver más</a>
+                <div class="fish">
+                    <div class="koiCoil"></div>
+                    <div class="koiCoil"></div>
+                    <div class="koiCoil"></div>
+                    <div class="koiCoil"></div>
+                    <div class="koiCoil"></div>
+                    <div class="koiCoil"></div>
+                    <div class="koiCoil"></div>
+                    <div class="koiCoil"></div>
+                    <div class="koiCoil"></div>
+                    <div class="koiCoil"></div>
+                    <div class="koiCoil"></div>
+                    <div class="koiCoil"></div>
+                    <div class="koiCoil"></div>
+                    <div class="koiCoil"></div>
+                    <div class="koiCoil"></div>
                 </div>
+            </section>
 
-                <div class="card">
-                    <strong>2D Rasterizer in Rust</strong><br />
-                    A 2D rasterizer based on OneLoneCoder's C++ version.<br />
-                    <a href="https://github.com/Garkatron/ScrapRenderer" target="_blank" rel="noopener noreferrer">Ver
-                        más</a>
-                </div>
-
-                <div class="card">
-                    <strong>Rust-Coded LRU Cache</strong><br />
-                    Tiny LRU cache to understand its workings.<br />
-                    <a href="https://github.com/Garkatron/LRU-Cache-Rust" target="_blank" rel="noopener noreferrer">Ver
-                        más</a>
-                </div>
-            </div>
-        </section>
-
-        <hr />
-
-        <section>
-            <h2>Other projects</h2>
-            <ul>
-                <li><a href="https://garkatron.github.io/PC-PokeApi/" target="_blank" rel="noopener noreferrer">PC
-                        Pokémon Web (PokeAPI)</a></li>
-                <li><a href="https://github.com/Garkatron/TerraX69-JS" target="_blank"
-                        rel="noopener noreferrer">TerraX69 (JS Game, Tauri)</a></li>
-                <li><a href="https://github.com/Garkatron/Von-Neumann-Simulator" target="_blank"
-                        rel="noopener noreferrer">CHIP-8 Emulator in Python</a></li>
-                <li><a href="https://github.com/Garkatron/Von-Neumann-Simulator" target="_blank"
-                        rel="noopener noreferrer">Von Neumann Simulator (Python)</a></li>
-            </ul>
-        </section>
-
-        <hr />
-
-        <section style="pointer-events: none;">
-            <div class="fish">
-                <div class="koiCoil"></div>
-                <div class="koiCoil"></div>
-                <div class="koiCoil"></div>
-                <div class="koiCoil"></div>
-                <div class="koiCoil"></div>
-                <div class="koiCoil"></div>
-                <div class="koiCoil"></div>
-                <div class="koiCoil"></div>
-                <div class="koiCoil"></div>
-                <div class="koiCoil"></div>
-                <div class="koiCoil"></div>
-                <div class="koiCoil"></div>
-                <div class="koiCoil"></div>
-                <div class="koiCoil"></div>
-                <div class="koiCoil"></div>
-            </div>
-            <div class="fish">
-                <div class="koiCoil"></div>
-                <div class="koiCoil"></div>
-                <div class="koiCoil"></div>
-                <div class="koiCoil"></div>
-                <div class="koiCoil"></div>
-                <div class="koiCoil"></div>
-                <div class="koiCoil"></div>
-                <div class="koiCoil"></div>
-                <div class="koiCoil"></div>
-                <div class="koiCoil"></div>
-                <div class="koiCoil"></div>
-                <div class="koiCoil"></div>
-                <div class="koiCoil"></div>
-                <div class="koiCoil"></div>
-                <div class="koiCoil"></div>
-            </div>
-        </section>
-
+        </div>
     </main>
+
+    <script src="index.js"></script>
     <script>
         function copyEmail() {
             const email = "masitacarg@gmail.com";
@@ -183,6 +191,7 @@
             });
         }
     </script>
+
 </body>
 
 </html>
