--- a/index.html
+++ b/index.html
@@ -102,23 +102,21 @@
                         <strong>Rlox lang</strong><br />
                         A programming language based on jlox from <em>Crafting Interpreters</em>.<br />
                         <a href="https://github.com/Garkatron/Rust-Lox-Interpreter" target="_blank"
-                            rel="noopener noreferrer">Ver más</a>
+                            rel="noopener noreferrer">See more</a>
                     </div>
 
                     <div class="card">
                         <strong>2D Rasterizer in Rust</strong><br />
                         A 2D rasterizer based on OneLoneCoder's C++ version.<br />
                         <a href="https://github.com/Garkatron/ScrapRenderer" target="_blank"
-                            rel="noopener noreferrer">Ver
-                            más</a>
+                            rel="noopener noreferrer">See more</a>
                     </div>
 
                     <div class="card">
                         <strong>Rust-Coded LRU Cache</strong><br />
                         Tiny LRU cache to understand its workings.<br />
                         <a href="https://github.com/Garkatron/LRU-Cache-Rust" target="_blank"
-                            rel="noopener noreferrer">Ver
-                            más</a>
+                            rel="noopener noreferrer">See more</a>
                     </div>
                 </div>
 
