--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 </head>
 
 <body id="ex1">
+
+    <img src="https://images.unsplash.com/photo-1581299327801-faeb40ea459e?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8Zm9uZG9zJTIwYXp1bGVzfGVufDB8fDB8fHww"
+        alt="" id="effect">
     <main id="ex1-layer" class="container">
         <div class="paper-effect">
             <section class="profile-section">
